<resources>
    <string name="app_name">Katalog Film</string>
    <string name="title_activity_detail_film">Detail Film</string>

    <string name="title">Judul</string>
    <string name="overview">Ringkasan</string>
    <string name="release_date">Tanggal Rilis</string>
    <string name="genre">Aliran Film</string>
    <string name="duration">Durasi</string>
    <string name="movies">Film</string>
    <string name="tv_shows">Acara TV</string>
    <string name="bullet">•</string>
    <string name="share_film_information">Bagikan Informasi Film</string>
    <string name="see_film_details">Lihat Detail Film</string>
    <string name="no_contents">"Konten Tidak Ada</string>
    <string name="favorite">Favorit</string>
    <string name="favorite_activity_title">Favorit Katalog Film</string>
</resources>